imported from version 2.00, see Changes file.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Changes for the CPAN Testers Development website
 
+2.00	current
+	- redesign, based on a design by Wolfman.
+
 1.00	01/09/2008
 	- First released version, based on a design by Arcsin.
