imported from version 2.04, see Changes file.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes for the CPAN Testers Development website
 
+2.04	06/06/2010
+	- updated with all new sections and links.
+
 2.03	14/01/2010
 	- added quote.html
 	- added Analysis to site family lists.
