imported from version 2.05, see Changes file.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes for the CPAN Testers Development website
 
+2.05    24/09/2010
+	- added Metabase and Labyrinth links.
+	- repositioned site boxes to avoid text and logo clashing.
+
 2.04	06/06/2010
 	- updated with all new sections and links.
 
