change file dates changed to meet W3CDTF standards

--- a/Changes
+++ b/Changes
@@ -1,37 +1,39 @@
 Changes for the CPAN Testers Development website
+================================================
 
         - added META.yml & META.json.
         - reworked Makefile.PL.
+        - change file dates changed to meet W3CDTF standards.
 
-2.06    18/08/2011
-	- revised banner logo image by Jon 'JJ' Allen.
-	- added rel="nofollow" to database downloads.
-	- added links for Wiki and Blog packages.
-	- added intro for Devel and Preferences packages.
+2.06    2011-08-18
+        - revised banner logo image by Jon 'JJ' Allen.
+        - added rel="nofollow" to database downloads.
+        - added links for Wiki and Blog packages.
+        - added intro for Devel and Preferences packages.
 
-2.05    24/09/2010
-	- added Metabase and Labyrinth links.
-	- repositioned site boxes to avoid text and logo clashing.
+2.05    2010-09-24
+        - added Metabase and Labyrinth links.
+        - repositioned site boxes to avoid text and logo clashing.
 
-2.04	06/06/2010
-	- updated with all new sections and links.
+2.04	2010-06-06
+    	- updated with all new sections and links.
 
-2.03	14/01/2010
-	- added quote.html
-	- added Analysis to site family lists.
+2.03	2010-01-14
+        - added quote.html
+        - added Analysis to site family lists.
 
-2.02	18/07/2009
-	- added Release Summary database entry.
-	- added Reports Parser entry.
-	- added Reports Mailer entry.
-	- added VERSION template variable based on script version.
+2.02	2009-07-18
+        - added Release Summary database entry.
+        - added Reports Parser entry.
+        - added Reports Mailer entry.
+        - added VERSION template variable based on script version.
 
-2.01	03/06/2009
-	- added attributions to HTML.
-	- fixed CSS issues for IE (thanks to JJ).
+2.01	2009-06-03
+        - added attributions to HTML.
+        - fixed CSS issues for IE (thanks to JJ).
 
-2.00	22/05/2009
-	- redesign, based on a design by Wolfgang.
+2.00	2009-05-22
+    	- redesign, based on a design by Wolfgang.
 
-1.00	01/09/2008
-	- First released version, based on a design by Arcsin.
+1.00	2008-09-01
+	    - First released version, based on a design by Arcsin.
