--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Changes for the CPAN Testers Development website
         - reworked Makefile.PL for clarity.
         - change file dates changed to meet W3CDTF standards.
         - migrated script to official module.
+        - added CPAN Testers Admin family site links.
 
 2.06    2011-08-18
         - revised banner logo image by Jon 'JJ' Allen.
