--- a/Changes
+++ b/Changes
@@ -1,12 +1,14 @@
 Changes for the CPAN Testers Development website
 ================================================
 
+2.07    2015-04-18
         - added LICENSE, META.yml & META.json.
         - reworked Makefile.PL for clarity.
         - change file dates changed to meet W3CDTF standards.
         - migrated script to official module.
         - added CPAN Testers Admin family site links.
         - added test suite.
+        - finally released to CPAN!
 
 2.06    2011-08-18
         - revised banner logo image by Jon 'JJ' Allen.
