--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Changes for the CPAN Testers Development website
 ================================================
 
         - paths updated for github, and switches from s.p.o to metacpan.
+        - removed link references to cpanstats SQLite database.
 
 2.07    2015-04-18
         - added LICENSE, META.yml & META.json.
