--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Changes for the CPAN Testers Development website
         - paths updated for github, and switches from s.p.o to metacpan.
         - removed link references to cpanstats SQLite database.
         - Preferences and Development links updated.
+        - added cpanminus sub-section.
 
 2.07    2015-04-18
         - added LICENSE, META.yml & META.json.
