--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes for the CPAN Testers Development website
 ================================================
 
         - added Reports links.
+        - removed /tree from GitHub links.
+        - added Admin site entry.
 
 2.08    2015-04-19
         - paths updated for github, and switches from s.p.o to metacpan.
