--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Changes for the CPAN Testers Development website
 ================================================
 
+2.11    2016-04-22
+        - helps to include the javascript for the sponsors!
+
 2.10    2016-04-22
         - removed Birmingham.pm from footer.
         - added sponsors block in side panel.
